[gd_scene load_steps=2 format=3 uid="uid://bplq0rfcjsw4w"]

[ext_resource type="Script" path="res://scripts/end_screen.gd" id="1_5yidw"]

[node name="EndScreen" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5yidw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.403922, 0.403922, 0.403922, 0.654902)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="DayComplete" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="TotalSortedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="CorrectSortedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="NextDay" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 50)
layout_mode = 2
text = "Start Next Day"
